Fixed image overflow

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -254,6 +254,8 @@ header {
         }
         .nav-wrapper {
             padding-bottom: 15px;
+            margin-left: -15px;
+            margin-right: -15px;
             .navbar-nav > li {
                 padding: 15px 15px 0;
                 a {
